tests/tooling/fixtures/native/execution/positive/binary_literal_basic.objc3
module BinaryLiteralBasic;

let base = 0b1010;

fn main() -> i32 {
  return base + 0b11;
}
