tests/tooling/fixtures/native/execution/negative/compound_assignment_missing_rhs.objc3
module CompoundAssignmentMissingRhs;

fn main() -> i32 {
  let value = 1;
  value += ;
  return value;
}